# mba-stream-processing-pipelines

./: .env  .gitignore  README.md  pyproject.toml
src/app/: consumer.py  producer.py
src/app/data/in/: dados_3.json
